# tinytask

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/tinytask/: callbacks.py  configfile.py  decorators.py  example.py  exceptions.py  exepctions.py  factory.py  fileloaders.py  instantiator.py  ops.py  registry.py  task.py
tests/: test_configfile.py  test_ops.py  test_task.py
